--- a/templates/user.jinja2
+++ b/templates/user.jinja2
@@ -1,4 +1,7 @@
-$def with(user, avatars)
+{% extends "standard.jinja2" %}
+{% from 'funcs.jinja2' import avatar_table, avatar_to_td_edit %}
+
+{% block body %}
 <div class="left">
 	<h3>Upload</h3>
 	<center>
@@ -10,11 +13,10 @@ $def with(user, avatars)
 
 	<h3>Info</h3>
 	<center>
-		<p>Link to avatar: <a href="http://rav.shishnet.org/${user.username}.png">$#
-		http://rav.shishnet.org/${user.username}.png</a>
-		<br>Link to gallery: <a href="http://rav.shishnet.org/${user.username}.html">$#
-		http://rav.shishnet.org/${user.username}.html</a>
-		<br><a href="/timeline/${user.username}.jpg">Facebook Timeline Cover</a>
+		<p>Link to avatar:
+		<a href="https://rav.shishnet.org/{{ user.username }}.png">https://rav.shishnet.org/{{ user.username }}.png</a>
+		<br>Link to gallery:
+		<a href="https://rav.shishnet.org/{{ user.username }}.html">https://rav.shishnet.org/{{ user.username }}.html</a>
 		</p>
 		<p><a href="/">Main Page</a> | <a href="logout">Log Out</a></p>
 	</center>
@@ -26,11 +28,11 @@ $def with(user, avatars)
 		<table class="form">
 			<tr>
 				<td>Gallery message:</td>
-				<td><textarea name="message" rows="4" cols="50">$user.message</textarea></td>
+				<td><textarea name="message" rows="4" cols="50">{{ user.message }}</textarea></td>
 			</tr>
 			<tr>
 				<td>Email</td>
-				<td><input type="text" name="email" value="$user.email"></td>
+				<td><input type="text" name="email" value="{{ user.email }}"></td>
 			</tr>
 			<tr>
 				<td colspan="2"><input type="submit" value="Set"></td>
@@ -42,6 +44,7 @@ $def with(user, avatars)
 <div class="all">
 	<h3>Avatars</h3>
 	<table id="avatars">
-		$:avatars
+		{{ avatar_table(user.avatars, 5, avatar_to_td_edit) }}
 	</table>
 </div>
+{% endblock %}
