format, and name templates .html to enable auto-escape

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,5 +1,5 @@
-{% extends "standard.jinja2" %}
-{% from 'funcs.jinja2' import avatar_table, avatar_to_td2 %}
+{% extends "standard.html" %}
+{% from 'funcs.html' import avatar_table, avatar_to_td2 %}
 
 {% block body %}
 <div class="left">
