--- a/templates/manual.html
+++ b/templates/manual.html
@@ -1,5 +1,5 @@
-{% extends "standard.jinja2" %}
-{% from 'funcs.jinja2' import avatar_table %}
+{% extends "standard.html" %}
+{% from 'funcs.html' import avatar_table %}
 
 {% block body %}
 
