--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,5 @@
-{% extends "standard.jinja2" %}
-{% from 'funcs.jinja2' import avatar_table, avatar_to_td_edit %}
+{% extends "standard.html" %}
+{% from 'funcs.html' import avatar_table, avatar_to_td_edit %}
 
 {% block body %}
 <div class="left">
