--- a/templates/gallery_list.html
+++ b/templates/gallery_list.html
@@ -1,5 +1,5 @@
-{% extends "standard.jinja2" %}
-{% from 'funcs.jinja2' import avatar_table, avatar_to_td_user %}
+{% extends "standard.html" %}
+{% from 'funcs.html' import avatar_table, avatar_to_td_user %}
 
 {% block body %}
 <div class="left_thin">
