--- a/rav2/templates/standard.html
+++ b/rav2/templates/standard.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>{{ title }}</title>
+		<title>{{ title }} [Rav - The Random Avatar Host]</title>
 		<link rel="stylesheet" href="static/style.css">
 		<script language="javascript" src="static/script.js"></script>
 	</head>
