--- a/rav2/static/style.css
+++ b/rav2/static/style.css
@@ -1,44 +1,91 @@
+* {box-sizing: border-box;}
 BODY {background: #EEE;}
+
+HEADER, ARTICLE, FOOTER {
+	margin: auto;
+	max-width: 1000px;
+}
 
 H1 {margin-top: 0px;margin-bottom: 0px;}
 H2 {margin-top: 32px;}
 
-H1, H2, H3, #footer {
+H1, H2, H3, FOOTER {
 	text-align: center;
-	clear: both;
 	border: 1px solid #BBB;
 	background: #DDD;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
-	-webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-	-moz-box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+	border-radius: 12px;
+	box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+	padding: 0.2em;
 }
-#container {
-	margin: auto;
-	max-width: 1000px;
-}
-#footer {
+FOOTER {
+	margin-top: 1em;
 	font-size: 0.75em;
 	padding: 0.5em;
 }
-#nav {
-	margin-top: 16px;
-	display: block;
-	margin: auto;
-	padding: 0px;
-	text-align: center;
-}
-#nav SPAN {
-	margin: 0px;
-	padding: 4px;
-}
 
-#examples {
-	width: 100%;
+ARTICLE {
+	display: grid;
+	column-gap: 1em;
 }
-#examples TD {
-	text-align: center;
+SECTION {text-align: center;}
+SECTION#navigation {grid-area: navigation;}
+
+ARTICLE#index {
+	grid-template:
+		"navigation examples" auto
+		"login      examples" auto
+		"create     examples" auto
+		".          examples" auto
+		/ 250px auto;
 }
+SECTION#login {grid-area: login;}
+SECTION#create {grid-area: create;}
+SECTION#examples {grid-area: examples;}
+
+ARTICLE#user {
+	grid-template:
+		"navigation settings" auto
+		"upload     settings" auto
+		"avatars    avatars " auto
+		/ 1fr 1fr;
+}
+SECTION#upload {grid-area: upload;}
+SECTION#settings {grid-area: settings;}
+SECTION#avatars {grid-area: avatars;}
+
+ARTICLE#manual {
+	grid-template:
+		"navigation notes" auto
+		".          control" auto
+		".          tnc" auto
+		/ 250px auto;
+}
+SECTION#notes {grid-area: notes;}
+SECTION#control {grid-area: control;}
+SECTION#tnc {grid-area: tnc;}
+
+ARTICLE#gallery_list {
+	grid-template:
+		"navigation new" auto
+		"list       new" auto
+		".          new" auto
+		".          random" auto
+		/ 250px auto;
+}
+SECTION#list {grid-area: list;}
+SECTION#new {grid-area: new;}
+SECTION#navigation {grid-area: navigation;}
+SECTION#random {grid-area: random;}
+
+ARTICLE#gallery {
+	grid-template:
+		"navigation message stats" auto
+		"avatars avatars avatars" auto
+		/ 1fr 1fr 1fr;
+}
+SECTION#message {grid-area: message;}
+SECTION#stats {grid-area: stats;}
+SECTION#avatars {grid-area: avatars;}
 
 #login TD {
 	text-align: center;
@@ -46,35 +93,26 @@ H1, H2, H3, #footer {
 #login INPUT {
 	width: 100%;
 }
-
-.left {width: 49%; float: left;}
-.left_thin {width: 24%; float: left;}
-.right {width: 49%; float: right;}
-.right_wide {width: 74%; float: right;}
-.all {clear: both;}
-
-.left, .right, .all, .left_thin, .right_wide {
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-.enabled {}
-.disabled {background: #CCC;}
-
-#avatars {
-	width: 100%;
-}
-#avatars TD {
-	text-align: center;
-	font-size: 0.8em;
-	width: 20%;
-	padding: 8px;
-}
-#avatars TD IMG {
-	max-width: 256px;
-	max-height: 256px;
-}
-
 .form INPUT {
 	width: 100%;
 }
+
+.avatars {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.avatars .avatar {
+	//border: 1px solid black;
+	text-align: center;
+	font-size: 0.8em;
+	width: 160px;
+	padding: 8px;
+}
+.avatars .avatar IMG {
+	max-width: 100%;
+	max-height: 100%;
+}
+.avatars .avatar.enabled {}
+.avatars .avatar.disabled {background: #CCC;}
